config/index.css
* {
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
  background: none;
}
::-webkit-scrollbar-track {
  background: none;
}
::-webkit-scrollbar-thumb {
  background: rgba(127, 127, 127, 0.5);
  border-radius: 0;
}
::-webkit-scrollbar-corner {
  background: none;
}

body {
  margin: 0;
  padding: 0;

  font-family: 'Roboto', 'Segoe UI', 'Source Han Sans', 'MalgunGotinc', '본고딕', '맑은 고딕', sans-serif;

  -webkit-user-select: none;
  overflow: hidden;
}

h1, h2, h3 {
  font-size: 2rem;
  font-weight: lighter;
  margin: 0;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

b {
  font-weight: bold;
}
.hidden {
  display: none;
}
.text-muted {
  opacity: 0.5;
}
.text-left.text-left {
  text-align: left;
}
.text-center.text-center {
  text-align: center;
}
.text-right.text-right {
  text-align: right;
}

input[type=text], select {
  text-align: right;
  background: none;
  border-bottom: 0.1rem solid #006064;
  padding: 0.25rem;

  transition: 100ms border-bottom-color ease;
}
input[type=text]:focus, select:focus {
  border-bottom-color: #0097A7;
}
input[type=range] {
  vertical-align: middle;
}
button {
  padding: 0.25rem 0.5rem;
  background: none;

  transition: 200ms background ease;
  background: #E0F7FA; /* cyan 50 */
}
button:hover {
  background: rgba(0, 0, 0, 0.125);
}

aside {
  float: left;
  width: 16rem;
  height: 100vh;

  margin: 0;
  padding: 1rem;

  background: #006064;
  color: #fff;
  fill: #fff;
}
aside ::-webkit-scrollbar-thumb {
  background: #fff;
}
aside > h1 {
  margin-bottom: 1rem;
  padding: 0.5rem;
}

aside > .menu {
  overflow-y: auto;
  height: calc(100vh - 6.75rem);
}
.menu > li {
  height: 3rem;
  padding: 0.75rem;
  cursor: pointer;
  transition: 200ms background ease;
}
.menu > li:hover {
  background: rgba(0, 0, 0, 0.25);
}
.menu > li.splitter {
  height: 0;

  margin: 0.5rem 1rem;
  padding: 0;
  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.25);
}
.menu > li > svg {
  width: 1.5rem;
  height: 1.5rem;
}
.menu > li > label {
  margin-left: 1rem;
  vertical-align: 0.375rem;
}

header {
  display: flex;
  float: left;
  width: calc(100vw - 16rem);
  height: 6rem;

  background: #fff;

  position: relative;
  z-index: 10;
}
header > h2 {
  padding: 1.5rem;
  flex-grow: 100;
}
header > ul {
  list-style: none;
  display: flex;

  padding: 1.5rem;
}
header > ul > li {
  padding: 0.75rem 1rem;
  transition: 200ms background ease;
}
.button-primary {
  color: #0097A7; /* cyan 700 */
}

main {
  float: left;
  width: calc(100vw - 16rem);
  height: calc(100vh - 6rem);

  position: relative;
}
main h3 {
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.125rem;
  color: #0097A7; /* cyan 700 */

  margin: 1rem 0;
}
main > section {
  display: none;
  width: 100%;
  height: 100%;

  padding: 0.5rem 1.5rem;
  overflow-y: auto;

  box-shadow: 0 0.25rem 0.5rem -0.25rem rgba(0, 0, 0, 0.5) inset;

  position: absolute;
  top: 0;
  z-index: 0;
}
section.active {
  display: block;
}
article {
  margin-bottom: 2.5rem;
}
section p {
  margin: 1rem 0;
}
section blockquote {
  padding: 0.25rem 0;
  font-size: 0.875rem;
  color: #999;
}

.control {
  display: flex;
}
.control.text-right {
  justify-content: flex-end;
}
.control > label {
  flex-grow: 100;
}
.control button + button {
  margin-left: 0.5rem;
}
.input-value {
  font-size: 0.75rem;
  opacity: 0.5;
}
.input-value-style {
  display: inline-block;
  width: 1rem;
  height: 1rem;

  margin-right: 0.25rem;

  font-size: 0.75rem;
  line-height: 1rem;
  text-align: center;
  vertical-align: -0.125rem;

  transition: all 200ms ease;
}

.list {
  line-height: 1.5rem;
  margin-left: 2rem;
}
ul.list {
  list-style: disc;
}
ol.list {
  list-style: decimal;
}

label.input-value-style.job {
  width: 2.75rem;
  height: 1.5rem;
  vertical-align: -0.375rem;
  text-align: right;
}
label.input-value-style.job:before {
  color: #eee;
  display: inline;
  content: '1a';
  margin-left: 0.125rem;
  vertical-align: 0.5rem;
}
label.input-value-style.job img {
  height: 100%;
}

.tabbed-section {
  height: calc(100% + 1rem);
  margin-top: -1rem;
  padding: 0;

  overflow: initial;
  box-shadow: none;
  z-index: 15;
}
.tab {
  display: flex;

  width: 100%;
  height: 3rem;

  overflow-x: auto;
  box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
}
.tab li {
  flex-grow: 1;
  flex-shrink: 0;
  border-bottom: 0 solid #00bcd4;
  padding: 0.75rem;

  transition: background 200ms ease, border-bottom-width 200ms ease;
}
.tab li.active {
  border-bottom-width: 0.125rem;
}
.tab li.draggable {
  cursor: ew-resize;
}
.tab li:hover {
  background: rgba(0, 0, 0, 0.05);
}
.tab li.tab-button {
  flex-grow: 0;
  flex-shrink: 0;
  padding: 0.75rem 0.25rem;
  width: 2rem;
}
.tab li svg {
  fill: rgba(0, 0, 0, 0.5);
  cursor: pointer;
}
.tab li label {
  vertical-align: 0.375rem;
}

.tabconfig-pane-container {
  width: 100%;
  height: calc(100% - 3rem);
}
.tabconfig-pane {
  display: none;
  height: 100%;
}
.tabconfig-pane.active {
  display: block;
}
.tabconfig-pane > article {
  padding: 0.5rem 1.5rem;
  margin-bottom: 0;
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
}

.tabconfig-content {
  padding: 1rem 1.5rem;
  height: calc(100% - 10.875rem);

  overflow-y: auto;
}

.tabconfig-list-container {
  display: flex;
  height: calc(100% - 10.875rem);
}
.tabconfig-list {
  width: 50%;
  height: 100%;
  position: relative;

  user-select: none;
  -webkit-user-select: none;
}
.tabconfig-list li {
  padding: 0.5rem;
  cursor: move;
}
.tabconfig-list > ul {
  padding-top: 2rem;
  overflow-x: hidden;
  overflow-y: auto;
  height: 100%;
}
.tabconfig-list .header {
  font-size: 0.75rem;
  width: 100%;

  position: absolute;
  top: 0;
  left: 0;

  background: rgba(255, 255, 255, 0.75);
  box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.125);
}

.sortable-ghost, .sortable-chosen {
  background: rgba(0, 0, 0, 0.1);
  color: rgba(0, 0, 0, 0.5);
}
.sortable-drag {
  opacity: 0;
}


section[data-page=info] {
  font-family: 'Roboto Mono', 'Source Han Sans', 'MalgunGotinc', '본고딕', '맑은 고딕', monospace;
  font-weight: lighter;
  font-size: 0.75rem;
  text-align: center;

  background: black;
  color: white;

  z-index: 201408151230; /* tenki ga ii */
}
.clock {
  width: 26rem;
  height: 8rem;

  margin: 4rem auto;
  overflow: hidden;
}
#kagerou {
  font-size: 2rem;
  letter-spacing: 0.5rem;
  margin-left: 0.5rem;
  color: white;
}
#kagerou > mark {
  color: #2196f3; /* blue 500 */
  background: none;
}
section[data-page=info] p {
  margin: 1rem 0;
}
pre {
  font-size: 0.7rem;
  opacity: 0.75;
  white-space: pre-wrap;
}
header, main {
  transition: 200ms height ease;
}
.hide-header header {
  height: 0;
}
.hide-header main {
  height: 100vh;
}

